# OpenCV_Docs

code/: CMakeLists.txt  SURF_Descriptor.cpp  T2_matrix.cpp  basic_1.cpp  basic_2a.cpp  basic_2b.cpp
source/: buildScript.sh  conf.py  index.rst
source/tutorials/: installation.rst
source/tutorials/basic_2/: basic_2.rst
source/tutorials/basic_matrix_1/: basic_matrix_1.rst
source/tutorials/nonfree_1/: nonfree_1.rst
